--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -29,7 +29,7 @@ p{
     margin-right: 5rem;
     float: right;
     width: 500px;
-    height: 400px;
+    height: 350px;
     border-radius: 20px;
 }
 
@@ -48,5 +48,16 @@ h2{
 
 .list-item{
     margin-left: 5rem;
-    
+    font-size: 20px;
+}
+
+.footer{
+    margin-top: 5rem;
+    display: flex;
+    justify-content: center;
+}
+
+.footer-text{
+    margin-top: 10rem;
+    float: left;
 }
