Final commit, until further notice

--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -53,11 +53,15 @@ h2{
 
 .footer{
     margin-top: 5rem;
+    text-align: center;
+}
+
+.foot-nav{
     display: flex;
     justify-content: center;
 }
 
-.footer-text{
-    margin-top: 10rem;
-    float: left;
+.card{
+    width: 18rem;
+    margin: 3rem;
 }
